provide correct repo name

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,5 +25,5 @@ jobs:
       with:
         context: .
         push: true
-        tags: user/app:latest
+        tags: rateekdegaons/actions:latest
         file: Dockerfile
